--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias2.github.io/selectestado.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias2.github.io/mapaStyle.css">
+<script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/selectestado.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapaStyle.css">
 <!-- <link rel="stylesheet" type="text/css" href="mapaStyle007.css"> -->
 <div id="mapasvg">
   <div id="chartdiv"></div>
@@ -164,5 +164,5 @@
 </div>
 <br>
 <br>
-<script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias2.github.io/mapevents.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapevents.js"></script>
 <!-- <script src="mapevents002.js"></script> -->
