--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/selectestado.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapaStyle.css">
-<!-- <link rel="stylesheet" type="text/css" href="mapaStyle007.css"> -->
+<!-- <script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/selectestado.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapaStyle.css"> -->
+
+<script src="selectestado.js"></script>
+<link rel="stylesheet" type="text/css" href="mapaStyle.css">
+
 <div id="mapasvg">
   <div id="chartdiv"></div>
   <div id="icon-federal" onclick="select_estado('Federal')" class="tooltip">
@@ -165,5 +168,5 @@
 </div>
 <br>
 <br>
-<script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapevents.js"></script>
-<!-- <script src="mapevents002.js"></script> -->
+<!-- <script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapevents.js"></script> -->
+<script src="/mapevents.js"></script>
