--- a/index.html
+++ b/index.html
@@ -169,4 +169,4 @@
 <br>
 <br>
 <!-- <script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapevents.js"></script> -->
-<script src="/mapevents.js"></script>
+<script src="mapevents.js"></script>
