--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
 
-<!-- <script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/selectestado.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapaStyle.css"> -->
-
-<script src="selectestado.js"></script>
-<link rel="stylesheet" type="text/css" href="mapaStyle.css">
+<script src="selectestado.js?v=001"></script>
+<link rel="stylesheet" type="text/css" href="mapaStyle.css?v=001">
 
 <div id="mapasvg">
   <div id="chartdiv"></div>
@@ -168,5 +165,5 @@
 </div>
 <br>
 <br>
-<!-- <script src="https://cdn.jsdelivr.net/gh/lunderstudio/fiscalias3/tree/feature/Refactor/mapevents.js"></script> -->
-<script src="mapevents.js"></script>
+
+<script src="mapevents.js?v=001"></script>
