--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script src="https://cdn.amcharts.com/lib/4/maps.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/geodata/mexicoLow.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
@@ -12,6 +13,7 @@
 <script src="InformacionEstados.js?v=001"></script>
 <script src="selectestado.js?v=003"></script>
 <link rel="stylesheet" type="text/css" href="mapaStyle.css?v=001">
+<link rel="stylesheet" type="text/css" href="ProcesoInvestigacion.css?v=001">
 
 <div id="mapasvg">
   <div id="chartdiv"></div>
@@ -40,145 +42,139 @@
   </div>
 </div>
 <div class="container-fluid">
-  <div class="card border-card">
-    <div class="card-body">
-      <h4 class="card-title text-card-title" id="idEntidad">Federal</h4>
-      <div class="row">
-        <form id="radio_box_años">
-          <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+  <div class="card-deck">
+    <div class="card">
+      <!-- <div class="card border-card"> -->
+      <!-- Card Proceso de Investicacion -->
+      <div class="card-body">
+        <h4 class="card-title text-card-title" id="idEntidad">Federal</h4>
+        <div class="row">
+          <form id="radio_box_años">
+            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
 
-            <input type="radio" class="btn-check" name="años" value="2019" id="btnradio2019" autocomplete="off" >
-            <label class="btn btn-outline-warning" for="btnradio2019">2019</label>
+              <input type="radio" class="btn-check" name="años" value="2019" id="btnradio2019" autocomplete="off">
+              <label class="btn btn-outline-warning" for="btnradio2019">2019</label>
 
-            <input type="radio" class="btn-check" name="años" value="2020" id="btnradio2020" autocomplete="off">
-            <label class="btn btn-outline-warning" for="btnradio2020">2020</label>
+              <input type="radio" class="btn-check" name="años" value="2020" id="btnradio2020" autocomplete="off">
+              <label class="btn btn-outline-warning" for="btnradio2020">2020</label>
 
-            <input type="radio" class="btn-check" name="años" value="2021" id="btnradio2021" autocomplete="off">
-            <label class="btn btn-outline-warning" for="btnradio2021">2021</label>
+              <input type="radio" class="btn-check" name="años" value="2021" id="btnradio2021" autocomplete="off">
+              <label class="btn btn-outline-warning" for="btnradio2021">2021</label>
 
-            <input type="radio" class="btn-check" name="años" value="2022" id="btnradio2022" autocomplete="off" checked>
-            <label class="btn btn-outline-warning" for="btnradio2022">2022</label>
+              <input type="radio" class="btn-check" name="años" value="2022" id="btnradio2022" autocomplete="off"
+                checked>
+              <label class="btn btn-outline-warning" for="btnradio2022">2022</label>
 
-          </div>
-        </form>
-
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <p class="text-title"> Proceso de Investigación</p>
-          <div class="row">
-            <div class="col text-parrafo">
-              <p>Denuncias recibidas</p>
             </div>
-            <div class="col text-number" id="IdDenuncias">4566</div>
-          </div>
-          <div class="row">
-            <div class="col text-parrafo">
-              <p>Investigaciones de oficio iniciadas</p>
-            </div>
-            <div class="col text-number" id="idInvestigaciones">0</div>
-          </div>
-          <div class="row">
-            <div class="col text-parrafo">
-              <p>Carpetas de investigación abiertas</p>
-            </div>
-            <div class="col text-number" id="idCarpetas">4803</div>
-          </div>
-          <div class="row">
-            <div class="col text-parrafo">
-              <p>Formulación de imputación</p>
-            </div>
-            <div class="col text-number" id="idImputaciones">6</div>
-          </div>
-          <div class="row">
-            <div class="col text-parrafo">
-              <p>Vinculaciones a proceso</p>
-            </div>
-            <div class="col text-number" id="idVinculaciones">6</div>
-          </div>
-          <div class="row">
-            <div class="col text-parrafo">
-              <p>Sentencias condenatorias</p>
-            </div>
-            <div class="col text-number" id="idSentencias">0</div>
-          </div>
+          </form>
         </div>
-        <div class="col-md-5">
-          <p class="text-title">Resolución de carpetas de investigación</p>
-          <div class="row">
-            <div class="col-sm">
-              <div class="row">
-                <div class="col">
-                  <p class="text-parrafo-subtitulo">Resolución de carpetas <br> en combate a corrupción</p>
-                  <div class="text-total-green">
-                    <p class="text-center">Total <span id="idTotalCombate">&nbsp;&nbsp;3%</span></p>
+
+        <div class="row">
+          <div class="col-md-8">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Proceso de Investigación.</h5>
+                <div class="chart-container">
+                  <canvas id="chartProcesoInv"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="card" style="height: 98px; padding-bottom: 1em;">
+                  <div class="card-body">
+                    <h5 class="card-title">Presupuesto Otorgado.</h5>
                   </div>
                 </div>
               </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Judicialización</p>
-                <p class="text-number" id="idJudicialización">83</p>
-              </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Criterio de oportunidad</p>
-                <p class="text-number" id="idCriterios">2</p>
-              </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Medios alternativos de <br> solución de controversias</p>
-                <p class="text-number" id="idControversias">36</p>
-              </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Suspensión condicional <br> del proceso</p>
-                <p class="text-number" id="idSuspencion">NR</p>
-              </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Procedimiento abreviado</p>
-                <p class="text-number" id="idProcedimiento">NR</p>
-              </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Reparación del daño</p>
-                <p class="text-number" id="idReparacion">NR</p>
-              </div>
             </div>
-            <div class="col-sm">
-              <div class="row">
-                <div class="col">
-                  <p class="text-parrafo-subtitulo">Resolución de carpetas que no combaten la corrupción</p>
-                  <div class="text-total-red">
-                    <p class="text-center">Total <span id="idTotalNoCombate">&nbsp;&nbsp;12%</span></p>
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="card" style="height: 98px">
+                  <div class="card-body">
+                    <h5 class="card-title">Monto recuperado.</h5>
                   </div>
                 </div>
               </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Archivo temporal</p>
-                <p class="text-number" id="idArchivo">0</p>
-              </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">No ejercicio de la acción penal</p>
-                <p class="text-number" id="idAcccionPenal">450</p>
-              </div>
-              <div class="format-parrafo">
-                <p class="text-parrafo">Facultad de abstenerse de investigar</p>
-                <p class="text-number" id="idAbstenciones">147</p>
-              </div>
+
             </div>
+
           </div>
         </div>
-        <div class="col-md-3">
-          <p class="text-title">Presupuesto y monto</p>
-          <div class="row text-parrafo">
-            <div class="col text-left">
-              <p>Presupuesto otorgado</p>
+
+        <row class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-5">
+                    <p class="text-title">Resolución de carpetas de investigación</p>
+                    <div class="row">
+                      <div class="col-sm">
+                        <div class="row">
+                          <div class="col">
+                            <p class="text-parrafo-subtitulo">Resolución de carpetas <br> en combate a corrupción</p>
+                            <div class="text-total-green">
+                              <p class="text-center">Total <span id="idTotalCombate">&nbsp;&nbsp;3%</span></p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Judicialización</p>
+                          <p class="text-number" id="idJudicialización">83</p>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Criterio de oportunidad</p>
+                          <p class="text-number" id="idCriterios">2</p>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Medios alternativos de <br> solución de controversias</p>
+                          <p class="text-number" id="idControversias">36</p>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Suspensión condicional <br> del proceso</p>
+                          <p class="text-number" id="idSuspencion">NR</p>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Procedimiento abreviado</p>
+                          <p class="text-number" id="idProcedimiento">NR</p>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Reparación del daño</p>
+                          <p class="text-number" id="idReparacion">NR</p>
+                        </div>
+                      </div>
+                      <div class="col-sm">
+                        <div class="row">
+                          <div class="col">
+                            <p class="text-parrafo-subtitulo">Resolución de carpetas que no combaten la corrupción</p>
+                            <div class="text-total-red">
+                              <p class="text-center">Total <span id="idTotalNoCombate">&nbsp;&nbsp;12%</span></p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Archivo temporal</p>
+                          <p class="text-number" id="idArchivo">0</p>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">No ejercicio de la acción penal</p>
+                          <p class="text-number" id="idAcccionPenal">450</p>
+                        </div>
+                        <div class="format-parrafo">
+                          <p class="text-parrafo">Facultad de abstenerse de investigar</p>
+                          <p class="text-number" id="idAbstenciones">147</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col text-center" id="idPresupuesto">$233,531,300.00</div>
           </div>
-          <div class="row text-parrafo">
-            <div class="col text-left">
-              <p>Monto recuperado</p>
-            </div>
-            <div class="col text-center" id="idMonto">$8,277,485.52</div>
-          </div>
-        </div>
+        </row>
       </div>
     </div>
   </div>
@@ -187,3 +183,4 @@
 <br>
 
 <script src="mapevents.js?v=001"></script>
+<script src="charProcesoInv.js?v=001"></script>
