--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
                 </div>
               </div>
             </div>
-
           </div>
-
         </div>
       </div>
 
@@ -141,15 +139,8 @@
                 <div class="col-md-4">
                   <p class="text-parrafo-subtitulo">Porcentaje de resolución de carpetas.</p>
 
-                  <p class="text-parrafo-subtitulo">Resolución de carpetas en combate a corrupción</p>
-                  <div class="text-total-green">
-                    <p class="text-center">Total <span id="idTotalCombate">&nbsp;&nbsp;3%</span></p>
-                  </div>
-
-                  <p class="text-parrafo-subtitulo">Resolución de carpetas que no combaten la corrupción</p>
-                  <div class="text-total-red">
-                    <p class="text-center">Total <span id="idTotalNoCombate">&nbsp;&nbsp;12%</span></p>
-                  </div>
+                  <canvas id="ChartResolucion"></canvas>
+                
                 </div>
 
                 <div class="col-md-4">
@@ -167,7 +158,7 @@
                     <p class="text-number" id="idAbstenciones">147</p>
                   </div>
                 </div>
-                
+
               </div>
             </div>
           </div>
@@ -182,3 +173,4 @@
 
 <script src="mapevents.js?v=001"></script>
 <script src="charProcesoInv.js?v=001"></script>
+<script src="chartResolucionInv.js?v=001"></script>
