Se agregaron estilos a las img de cards

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-lg-12">
               <div class="card mb-3 card-presupuesto" style="max-width: 540px;">
                 <div class="row g-0">
-                  <div class="col-md-4" style="text-align:center">
+                  <div class="col-md-4 img-card-presupuestos-montos">
                     <!-- <img src="..."  alt="..."> -->
                     <img alt="" class=""
                     src="presupuesto_icon.svg" />
@@ -103,8 +103,8 @@
             <div class="col-lg-12">
               <div class="card mb-3 card-monto" style="max-width: 540px;">
                 <div class="row g-0">
-                  <div class="col-md-4" style="text-align:center">
-                    <img alt="" class="img-fluid rounded-start" 
+                  <div class="col-md-4 img-card-presupuestos-montos">
+                    <img alt="" class="" 
                     src="monto_icon.svg" />
                   </div>
                   <div class="col-md-8">
