--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col-md-8">
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">Proceso de Investigación.</h5>
+              <h5 class="card-title">Proceso de Investigación</h5>
               <div class="chart-container">
                 <canvas id="chartProcesoInv"></canvas>
               </div>
