Formart chart Proceso de inv

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/geodata/mexicoLow.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
@@ -86,9 +85,7 @@
               <div class="card mb-3 card-presupuesto" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4 img-card-presupuestos-montos">
-                    <!-- <img src="..."  alt="..."> -->
-                    <img alt="" class=""
-                    src="presupuesto_icon.svg" />
+                    <img alt="" src="presupuesto_icon.svg" />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -105,8 +102,7 @@
               <div class="card mb-3 card-monto" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4 img-card-presupuestos-montos">
-                    <img alt="" class="" 
-                    src="monto_icon.svg" />
+                    <img alt="" src="monto_icon.svg" />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
