--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-md-8">
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">Proceso de Investigación</h5>
+              <h5 class="card-title p-3 title-card-text">Proceso de Investigación</h5>
               <div class="chart-container">
                 <canvas id="chartProcesoInv"></canvas>
               </div>
@@ -121,7 +121,7 @@
         <div class="col-md-12">
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title text-title">Resolución de carpetas de investigación</h5>
+              <h5 class="card-title p-3 title-card-text">Resolución de carpetas de investigación</h5>
               <div class="row">
 
                 <div class="col-md-4">
