Fixed  datos y layout line and pie

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="row">
 
                 <div class="col-md-4">
-                  <p class="text-parrafo-subtitulo">Carpetas en favor del combate a la corrupción</p>
+                  <p class="text-parrafo-subtitulo" style="color: #27AE60;">Carpetas en favor del combate a la corrupción</p>
                   <div class="format-parrafo">
                     <p class="text-parrafo">Judicialización</p>
                     <p class="text-number" id="idJudicialización">83</p>
@@ -160,7 +160,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <p class="text-parrafo-subtitulo">Carpetas que no combaten a la corrupción</p>
+                  <p class="text-parrafo-subtitulo" style="color:#E74C3C">Carpetas que no combaten a la corrupción</p>
                   <div class="format-parrafo">
                     <p class="text-parrafo">Archivo temporal</p>
                     <p class="text-number" id="idArchivo">0</p>
