--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
 <!-- Acciones locales -->
-<script src="InformacionEstados.js?v=003"></script>
-<script src="selectestado.js?v=003"></script>
-<link rel="stylesheet" type="text/css" href="mapaStyle.css?v=003">
-<link rel="stylesheet" type="text/css" href="ProcesoInvestigacion.css?v=003">
+<script src="InformacionEstados.js?v=004"></script>
+<script src="selectestado.js?v=004"></script>
+<link rel="stylesheet" type="text/css" href="mapaStyle.css?v=004">
+<link rel="stylesheet" type="text/css" href="ProcesoInvestigacion.css?v=004">
 
 <div id="mapasvg">
   <div id="chartdiv"></div>
@@ -96,8 +96,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-lg-12">
               <div class="card mb-3 card-monto" style="max-width: 540px;">
                 <div class="row g-0">
@@ -110,6 +108,18 @@
                       <p class="card-text text-card">Monto recuperado</p>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="card" style="border-color: white;">
+                <div class="card-body texto-card-disclaimer">
+                  <strong>valor -1</strong> indica que la fiscalía no respondió a la pregunta o contestó de una manera
+                  poco accesible.
+                  <br>
+                  <strong>NR</strong> La fiscalía no respondió a la pregunta o contestó de una manera poco accesible.
+                  <br>
+                  <strong>AR</strong>AR: La fiscalía se abstuvo de responder a la pregunta.
                 </div>
               </div>
             </div>
@@ -187,6 +197,6 @@
 <br>
 <br>
 
-<script src="mapevents.js?v=003"></script>
-<script src="charProcesoInv.js?v=003"></script>
-<script src="chartResolucionInv.js?v=003"></script>
+<script src="mapevents.js?v=004"></script>
+<script src="charProcesoInv.js?v=004"></script>
+<script src="chartResolucionInv.js?v=004"></script>
