Se agrego disclaimer y estilos de la nueva card

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                   <strong>valor -1</strong> indica que la fiscalía no respondió a la pregunta o contestó de una manera
                   poco accesible.
                   <br>
-                  <strong>NR</strong> La fiscalía no respondió a la pregunta o contestó de una manera poco accesible.
+                  <strong>NR:</strong> La fiscalía no respondió a la pregunta o contestó de una manera poco accesible.
                   <br>
-                  <strong>AR</strong>AR: La fiscalía se abstuvo de responder a la pregunta.
+                  <strong>AR:</strong> La fiscalía se abstuvo de responder a la pregunta.
                 </div>
               </div>
             </div>
