Se agrego informacion y nuevo formato para tooltip

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
 <!-- Acciones locales -->
 <script src="InformacionEstados.js?v=004"></script>
+<script src="DatosTooltipMap.js"></script>
 <script src="selectestado.js?v=004"></script>
 <link rel="stylesheet" type="text/css" href="mapaStyle.css?v=004">
 <link rel="stylesheet" type="text/css" href="ProcesoInvestigacion.css?v=004">
