--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
 <!-- Acciones locales -->
 <script src="InformacionEstados.js?v=004"></script>
-<script src="DatosTooltipMap.js"></script>
+<script src="DatosTooltipMap.js?v=004"></script>
 <script src="selectestado.js?v=004"></script>
 <link rel="stylesheet" type="text/css" href="mapaStyle.css?v=004">
 <link rel="stylesheet" type="text/css" href="ProcesoInvestigacion.css?v=004">
@@ -42,6 +42,7 @@
     <p class="text-parrafo-federal">Federal </p>
   </div>
 </div>
+<div id="legenddiv" style="height: 50px;"></div>
 <div class="container-fluid">
 
   <div class="card border-card">
@@ -115,7 +116,7 @@
             <div class="col-lg-12">
               <div class="card" style="border-color: white;">
                 <div class="card-body texto-card-disclaimer">
-                  <strong>valor -1</strong> indica que la fiscalía no respondió a la pregunta o contestó de una manera
+                  <strong>valor -1:</strong> indica que la fiscalía no respondió a la pregunta o contestó de una manera
                   poco accesible.
                   <br>
                   <strong>NR:</strong> La fiscalía no respondió a la pregunta o contestó de una manera poco accesible.
