Cambio de leyenda y actualizo estado veracruz

--- a/index.html
+++ b/index.html
@@ -114,12 +114,7 @@
             <div class="col-lg-12">
               <div class="card" style="border-color: white;">
                 <div class="card-body texto-card-disclaimer">
-                  <strong>valor -1:</strong> indica que la fiscalía no respondió a la pregunta o contestó de una manera
-                  poco accesible.
-                  <br>
-                  <strong>NR:</strong> La fiscalía no respondió a la pregunta o contestó de una manera poco accesible.
-                  <br>
-                  <strong>AR:</strong> La fiscalía se abstuvo de responder a la pregunta.
+                  <strong>El valor -1</strong> en la gráfica y <strong>NR</strong> significan que la fiscalía no respondió a la pregunta o contestó de una manera poco accesible.
                 </div>
               </div>
             </div>
