--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="mapasvg">
   <div id="chartdiv"></div>
   <div id="icon-federal" onclick="select_estado('Federal')" class="tooltip">
-    <!-- <span class="">Federal: <br> 10/12</span> -->
+    <!-- <span class="">Federal: <br> 10/12</span> Armando -->
     <div style="font-size: 12px; font-family: Roboto; padding-bottom: 0;" class="tooltiptext">
       
       <div style="margin: 10px;">
