--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
 <!-- Acciones locales -->
-<script src="InformacionEstados.js?v=004"></script>
-<script src="DatosTooltipMap.js?v=004"></script>
-<script src="selectestado.js?v=004"></script>
-<link rel="stylesheet" type="text/css" href="mapaStyle.css?v=004">
-<link rel="stylesheet" type="text/css" href="ProcesoInvestigacion.css?v=004">
+<script src="src/js/InformacionEstados.js?v=004"></script>
+<script src="src/js/DatosTooltipMap.js?v=004"></script>
+<script src="src/js/selectestado.js?v=004"></script>
+<link rel="stylesheet" type="text/css" href="src/css/mapaStyle.css?v=004">
+<link rel="stylesheet" type="text/css" href="src/css/ProcesoInvestigacion.css?v=004">
 
 <div id="mapasvg">
   <div id="chartdiv"></div>
   <div id="icon-federal" onclick="select_estado('Federal')" class="tooltip">
-    <!-- <span class="">Federal: <br> 10/12</span> Armando -->
+    <!-- <span class="">Federal: <br> 10/12</span> -->
     <div style="font-size: 12px; font-family: Roboto; padding-bottom: 0;" class="tooltiptext">
       
       <div style="margin: 10px;">
@@ -36,7 +36,7 @@
         <p style="margin-bottom: 5px;"><strong>NR</strong><small> Monto recuperado</small></p>
       </div>
     </div>
-    <img width="50" height="42" src="Building.png" />
+    <img width="50" height="42" src="src/img/Building.png" />
     <p class="text-parrafo-federal">Federal </p>
   </div>
 </div>
@@ -85,7 +85,7 @@
               <div class="card mb-3 card-presupuesto" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4 img-card-presupuestos-montos">
-                    <img alt="" src="presupuesto_icon.svg" />
+                    <img alt="" src="src/img/presupuesto_icon.svg" />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -100,7 +100,7 @@
               <div class="card mb-3 card-monto" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4 img-card-presupuestos-montos">
-                    <img alt="" src="monto_icon.svg" />
+                    <img alt="" src="src/img/monto_icon.svg" />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -193,6 +193,6 @@
 <br>
 <br>
 
-<script src="mapevents.js?v=004"></script>
-<script src="charProcesoInv.js?v=004"></script>
-<script src="chartResolucionInv.js?v=004"></script>
+<script src="src/js/mapevents.js?v=004"></script>
+<script src="src/js/charProcesoInv.js?v=004"></script>
+<script src="src/js/chartResolucionInv.js?v=004"></script>
